--- a/jobs/index.html
+++ b/jobs/index.html
@@ -473,39 +473,59 @@ window.addEventListener('click',(e)=>{
         <section id="doc" class="bg-[#F3FAFF] dark:bg-[#071C46] mt-[66px]">
             <main class="container px-4 lg:px-7 py-10 md:py-16">
                 <div><html><head></head><body><h1 id="join-simplex-chat-team" tabindex="-1">Join SimpleX Chat team</h1>
-<p>SimpleX Chat is a seed stage startup with a lot of user growth in 2022-2025, and a lot of exciting technical and product problems to solve to grow faster.</p>
-<p>We currently have 4 people in the team.</p>
-<p>We are looking for passionate and creative people to help us!</p>
+<p>Join SimpleX Chat team to build the future of secure, private, and decentralized communications.</p>
 <h2 id="who-we-are-looking-for" tabindex="-1">Who we are looking for</h2>
 <div class="job-tab"><div class="flex items-center justify-between job-tab-btn cursor-pointer">
-        <h3>Mobile application developer</h3>
+        <h3>iOS Engineer</h3>
         <svg class="fill-grey-black dark:fill-white" width="10" height="5" viewBox="0 0 10 5" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M8.40813 4.79332C8.69689 5.06889 9.16507 5.06889 9.45384 4.79332C9.7426 4.51775 9.7426 4.07097 9.45384 3.7954L5.69327 0.206676C5.65717 0.17223 5.61827 0.142089 5.57727 0.116255C5.29026 -0.064587 4.90023 -0.0344467 4.64756 0.206676L0.886983 3.7954C0.598219 4.07097 0.598219 4.51775 0.886983 4.79332C1.17575 5.06889 1.64393 5.06889 1.93269 4.79332L5.17041 1.70356L8.40813 4.79332Z"></path>
         </svg>
-      </div><div class="job-tab-content"><p>You:</p><ul>
-<li>created mobile applications for Android platforms as <strong>your own full-time or side projects</strong>,</li>
-<li>expertise with Android APIs, Kotlin and JetPack Compose framework,</li>
-<li><a href="https://paulgraham.com/taste.html">a good taste</a> for mobile apps design would be a bonus.</li>
-</ul><p>It is not a full time job yet, we have some specific problems to solve in the Android app. If we are happy working together it is likely to evolve into a full-time job offer in 2026.</p><p>Please ONLY apply if you created and released your own apps (not as a job or contract for somebody else).</p></div></div>
+      </div><div class="job-tab-content"><p>We are looking for an entrepreneurial iOS engineer.</p><p>Please send your exceptional achievements related to iOS (created in your own free time, or via grants, or startups you co-founded, but not as part of employment or contract):</p><ul>
+<li>popular iOS open-source libraries or frameworks.</li>
+<li>iOS apps you developed on your own or as part of 2-people team.</li>
+<li>technical publications about iOS engineering.</li>
+</ul><p>This is a full-time remote contract. You must be in UTC +/- 8 hours timezone.</p></div></div>
+
+
+
+
+<div class="job-tab"><div class="flex items-center justify-between job-tab-btn cursor-pointer">
+        <h3>Application Engineer</h3>
+        <svg class="fill-grey-black dark:fill-white" width="10" height="5" viewBox="0 0 10 5" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M8.40813 4.79332C8.69689 5.06889 9.16507 5.06889 9.45384 4.79332C9.7426 4.51775 9.7426 4.07097 9.45384 3.7954L5.69327 0.206676C5.65717 0.17223 5.61827 0.142089 5.57727 0.116255C5.29026 -0.064587 4.90023 -0.0344467 4.64756 0.206676L0.886983 3.7954C0.598219 4.07097 0.598219 4.51775 0.886983 4.79332C1.17575 5.06889 1.64393 5.06889 1.93269 4.79332L5.17041 1.70356L8.40813 4.79332Z"></path>
+        </svg>
+      </div><div class="job-tab-content"><p>We are looking for an entrepreneurial Android/Desktop applications engineer with an advanced expertise in:</p><ul>
+<li>Kotlin Multiplatform.</li>
+<li>Jetpack Compose and JVM development.</li>
+<li>desktop applications for Linux, Mac and Windows.</li>
+<li>advanced knowledge of C/C++, Java, JavaScript and some other programming languages.</li>
+</ul><p>Please send your exceptional engineering achievements (created in your own free time, or via grants, or startups you co-founded, but not as part of employment or contract):</p><ul>
+<li>popular open-source libraries, frameworks or applications.</li>
+<li>apps you developed on your own or as part of 2-3 people team.</li>
+<li>technical publications about engineering.</li>
+</ul><p>This is a full-time remote contract. You must be in UTC +/- 8 hours timezone.</p></div></div>
+
+
+
+
+
+<div class="job-tab"><div class="flex items-center justify-between job-tab-btn cursor-pointer">
+        <h3>Community Builder</h3>
+        <svg class="fill-grey-black dark:fill-white" width="10" height="5" viewBox="0 0 10 5" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M8.40813 4.79332C8.69689 5.06889 9.16507 5.06889 9.45384 4.79332C9.7426 4.51775 9.7426 4.07097 9.45384 3.7954L5.69327 0.206676C5.65717 0.17223 5.61827 0.142089 5.57727 0.116255C5.29026 -0.064587 4.90023 -0.0344467 4.64756 0.206676L0.886983 3.7954C0.598219 4.07097 0.598219 4.51775 0.886983 4.79332C1.17575 5.06889 1.64393 5.06889 1.93269 4.79332L5.17041 1.70356L8.40813 4.79332Z"></path>
+        </svg>
+      </div><div class="job-tab-content"><p>We are looking for an entrepreneurial Community Builder and Marketer, with successful crowdfunding experience.</p><p>Please send your exceptional achievements related to community building, social media marketing, or crowdfunding (created in your free time or in startups you co-founded, but not as part of contract or employment):</p><ul>
+<li>large, active online communities, social media accounts, podcasts, or YouTube channels.</li>
+<li>successful crowdfunding campaigns that raised significant funds.</li>
+<li>high-profile publications, interviews, or viral content pieces.</li>
+</ul><p>This is a part-time remote contract. You must be in UTC +/- 8 hours timezone.</p></div></div>
 
 
 
 
 <h2 id="how-to-join-the-team" tabindex="-1">How to join the team</h2>
-<ol>
-<li>
-<p><a href="https://github.com/simplex-chat/simplex-chat#install-the-app">Install the app</a>, try using it with the friends and <a href="https://github.com/simplex-chat/simplex-chat#join-user-groups">join some user groups</a> – you will discover a lot of things that need improvements.</p>
-</li>
-<li>
-<p>Also look through <a href="https://github.com/simplex-chat/simplex-chat/issues">GitHub issues</a> submitted by the users to see what would you want to contribute as a test.</p>
-</li>
-<li>
-<p><a href="https://smp4.simplex.im/a#IWCurmcnKDvfOzGrQdqlXjKinqkvO10a2q__nWBVG6c">Connect to us</a> via SimpleX Chat to chat about what you want to contribute and about joining the team.</p>
-</li>
-<li>
-<p>You can also email <a href="mailto:jobs@simplex.chat?subject=Join%20SimpleX%20Chat%20team">jobs@simplex.chat</a></p>
-</li>
-</ol>
+<p>To apply, please <a href="/downloads/index.html">install SimpleX Chat app</a> and send your achievements to this <a href="https://smp16.simplex.im/a#OGL3qf7utOrUERFoFOROgdQaAkj_znzoeACNKDAsFNA">SimpleX address</a>.</p>
+<p><strong>We do NOT review CVs at the initial stage, please only send the links to your achievements</strong>.</p>
 </body></html></div>
             </main>
         </section>
