--- a/website/src/directory.html
+++ b/website/src/directory.html
@@ -260,6 +260,7 @@ active_directory: true
         app</a>.</p>
     <p>SimpleX Directory is also available as a <a href="https://smp4.simplex.im/a#lXUjJW5vHYQzoLYgmi8GbxkGP41_kjefFvBrdwg-0Ok" target="_blank">SimpleX chat bot</a>.</p>
     <p>Read about <a href="/docs/directory.html">how to add</a> your community</a>.</p>
+    <p style="color:red;">Under maintenance &mdash; you can't join these groups until <a href="https://time.is/UTC" target="_blank" style="color:red;">17:00 UTC</a>, 01/20.</p>
     <div class="search-container">
       <input id="search" autocomplete="off">
       <div id="top-pagination" class="pagination">
